--- a/assets/css/mobile-angular-ui-base.css
+++ b/assets/css/mobile-angular-ui-base.css
@@ -6487,7 +6487,7 @@ body {
 }
 
 .has-navbar-bottom .app-body {
-  padding-bottom: 51px;
+  /*padding-bottom: 51px;*/
 }
 
 .navbar-absolute-top {
@@ -6508,7 +6508,7 @@ body {
   bottom: 0;
   z-index: 0;
   display: block;
-  width: 80%;
+  width: 40%;
   background: #555555;
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
