--- a/partials/app.html
+++ b/partials/app.html
@@ -4,9 +4,10 @@
 {{content}}
 </div>
 -->
+
 <style>#branding{display:none;}</style>
 <div class="scrollable">
-    <div class="scrollable-content">
+    <div class="scrollable-content" ng-swipe-left="myswipeleft();" ng-swipe-right="myswiperight();">
         <div id="appContent">
         </div>
     </div>
