--- a/partials/settings.html
+++ b/partials/settings.html
@@ -9,9 +9,9 @@
             </div>
             <div style="margin:0px 15px;">
                 
-                <p class="alert alert-danger">Resetting your myHostos app clears all information associated with your app and initializes it with the default setting.  You can use this feature if your myHostos app is not functioning correctly (ex: the app icons are not appearing on the home screen).  This feature requires network connectivity.
+                <p class="alert alert-danger">Resetting your app clears all information associated with your app and initializes it with the default setting.  You can use this feature if your app is not functioning correctly (ex: the icons are not appearing on the sidebar).  This feature requires network connectivity.
                 </p>
-                <button class="btn btn-block btn-primary" ng-click="resetmyapp();">Reset myHostos</button>
+                <button class="btn btn-block btn-primary" ng-click="resetmyapp();">Reset app</button>
                 
             </div>
         </div>
